scripts/nullness/annotator/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8.txt
../annotator/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/Main.java:90: error: [initialization.field.uninitialized] the default constructor does not initialize field datiqingkuang
		public List<Integer> datiqingkuang;
		                     ^
../annotator/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/interpreter/InterpreterTest.java:80: error: [unboxing.of.nullable] unboxing a possibly-null reference var.get(key)
		return var.get(key);
		              ^
../annotator/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/mediator/AbstractMediator.java:11: error: [initialization.fields.uninitialized] the constructor does not initialize fields: purchase, sale, stock
	public AbstractMediator()
	       ^
../annotator/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/state/LiftStates.java:30: error: [dereference.of.nullable] dereference of possibly-null reference currentLiftState
		currentLiftState.close();
		^
../annotator/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/state/LiftStates.java:31: error: [dereference.of.nullable] dereference of possibly-null reference currentLiftState
		currentLiftState.run();
		^
../annotator/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/state/LiftStates.java:32: error: [dereference.of.nullable] dereference of possibly-null reference currentLiftState
		currentLiftState.stop();
		^
../annotator/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/state/LiftStates.java:42: error: [dereference.of.nullable] dereference of possibly-null reference currentLiftState
		currentLiftState.close();
		^
../annotator/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/state/LiftStates.java:43: error: [dereference.of.nullable] dereference of possibly-null reference currentLiftState
		currentLiftState.open();
		^
../annotator/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/state/LiftStates.java:44: error: [dereference.of.nullable] dereference of possibly-null reference currentLiftState
		currentLiftState.close();
		^
../annotator/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/state/LiftStates.java:45: error: [dereference.of.nullable] dereference of possibly-null reference currentLiftState
		currentLiftState.open();
		^
../annotator/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/state/LiftStates.java:46: error: [dereference.of.nullable] dereference of possibly-null reference currentLiftState
		currentLiftState.close();
		^
../annotator/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/state/LiftStates.java:48: error: [dereference.of.nullable] dereference of possibly-null reference currentLiftState
		currentLiftState.close();
		^
../annotator/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/state/LiftStates.java:49: error: [dereference.of.nullable] dereference of possibly-null reference currentLiftState
		currentLiftState.run();
		^
../annotator/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/state/LiftStates.java:50: error: [dereference.of.nullable] dereference of possibly-null reference currentLiftState
		currentLiftState.stop();
		^
../annotator/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/state/LiftStates.java:51: error: [dereference.of.nullable] dereference of possibly-null reference currentLiftState
		currentLiftState.run();
		^
../annotator/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/state/LiftStates.java:52: error: [dereference.of.nullable] dereference of possibly-null reference currentLiftState
		currentLiftState.stop();
		^
../annotator/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/state/LiftStates.java:53: error: [dereference.of.nullable] dereference of possibly-null reference currentLiftState
		currentLiftState.run();
		^
../annotator/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/state/LiftStates.java:54: error: [dereference.of.nullable] dereference of possibly-null reference currentLiftState
		currentLiftState.stop();
		^
Note: ../annotator/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/observe/ObserveTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
18 errors
